# Star-Finder-Telescope-V2

./: .gitmodules  README.md
arduino/telescope/: ArduCAM_Arduino_r4.patch  disable_heap4.py  modified_fsp.ld  platformio.ini  select_camera.py
arduino/telescope/include/: Commands.h  CustomServo.h  GPS.h  PIDController.h  Tasks.h  Telemetry.h  Utils.h  WiFiWrapper.h  Wifi.h
arduino/telescope/src/: Commands.cpp  GPS.cpp  PIDController.cpp  TaskCollectTelemetry.cpp  TaskControlCamera.cpp  TaskMoveBaseServos.cpp  TaskMoveServo.cpp  TaskPlanTrajectory.cpp  TaskReceiveCommand.cpp  Tasks.cpp  Telemetry.cpp  WiFiWrapper.cpp  Wifi.cpp  main.cpp
arduino/telescope/test/: TestPlanTrajectory.py  TestReceiveTelemetry.py  TestSimpleTrajectory.py  TestTelemRate.py
telescope/: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  arducam_remove_swap.py  clangtidy.sh  cppcheck.sh  sdkconfig  select_camera.py  tinygpsplus.patch
telescope/components/arducam/: CMakeLists.txt
telescope/components/camera/: CMakeLists.txt  Camera.cpp  Camera.h
telescope/components/commands/: CMakeLists.txt  Command.h  Commands.h  ControlCameraCmd.cpp  ControlCameraCmd.h  FocusCmd.cpp  FocusCmd.h  MoveBaseServosCmd.cpp  MoveBaseServosCmd.h  MoveServoCmd.cpp  MoveServoCmd.h  OTAUpdateCmd.cpp  OTAUpdateCmd.h  PlanTrajectoryCmd.cpp  PlanTrajectoryCmd.h  TelemRateCmd.cpp  TelemRateCmd.h
telescope/components/esp32servo/: CMakeLists.txt
telescope/components/gps/: CMakeLists.txt  GPS.cpp  GPS.h
telescope/components/ota/: CMakeLists.txt  OTAUpdater.cpp  OTAUpdater.h
telescope/components/serializer/: Serializer.h
telescope/components/servo/: CMakeLists.txt  CustomServo.cpp  CustomServo.h  PIDController.cpp  PIDController.h
telescope/components/task/: CMakeLists.txt  CustomTask.cpp  CustomTask.h  Tasks.cpp  Tasks.h
telescope/components/telemetry/: CMakeLists.txt  Telemetry.cpp  Telemetry.h
telescope/components/uart/: CMakeLists.txt  Uart.cpp  Uart.h
telescope/components/utils/: Serialization.h
telescope/components/wifi/: CMakeLists.txt  NetworkConstants.h  UDPReceiver.cpp  UDPReceiver.h  UDPSender.cpp  UDPSender.h  WiFiWrapper.cpp  WiFiWrapper.h  WifiInitializer.cpp  WifiInitializer.h
telescope/include/: CustomServo.h  GPS.h  Utils.h  WiFiWrapper.h
telescope/main/: CMakeLists.txt  TaskCollectTelemetry.cpp  TaskCollectTelemetry.h  TaskControlCamera.cpp  TaskControlCamera.h  TaskFindPosition.cpp  TaskFindPosition.h  TaskFocus.cpp  TaskFocus.h  TaskMoveBaseServos.cpp  TaskMoveBaseServos.h  TaskOTAUpdate.cpp  TaskOTAUpdate.h  TaskPlanTrajectory.cpp  TaskPlanTrajectory.h  TaskReceiveCommand.cpp  TaskReceiveCommand.h  TaskRemoteLog.cpp  TaskRemoteLog.h  main.cpp
telescope/src/: PIDController.cpp  TaskCollectTelemetry.cpp  TaskControlCamera.cpp  TaskMoveBaseServos.cpp  TaskPlanTrajectory.cpp  TaskReceiveCommand.cpp  Tasks.cpp  main.cpp
telescope/test/: TestFocus.py  TestPlanTrajectory.py  TestReceive.py  TestReceiveLogs.py  TestReceiveTelemetry.py  TestSimpleTrajectory.py  TestTakePhoto.py  TestTelemRate.py
telescope/test/device_tests/: TestPlanTrajectory.py  TestSend.py  TestSimpleTrajectory.py
telescope/test/device_tests/ota/: SimpleHttpsServer.py
telescope/test/ota/: SimpleHttpsServer.py  TestOTAUpdate.py
ui/: commands.py  dash_app.py  quart_app.py  requirements.txt  start_gui.sh
ui/layout/: background_telemetry.py  camera_controls.py  current_trajectory.py  header.py  layout.py  log_output.py  move_controls.py  ota_update.py  pid_graph.py  status_info.py  telem_rate_control.py  trajectory_planner.py
ui/models/: commands.py  telemetry.py
ui/services/: network_constants.py  ota_server.py  telemetry_bus.py
ui/services/databus/: camera_databus.py  log_databus.py  telemetry_databus.py
ui/services/listeners/: camera_listener.py  log_listener.py  telemetry_listener.py  udp_listener.py
ui/services/websocket/: camera_websocket.py  logs_websocket.py  telemetry_websocket.py  websocket.py
