idf_component_register(SRCS 
                        main.cpp
                        TaskCollectTelemetry.cpp
                        TaskControlCamera.cpp
                        TaskFindPosition.cpp
                        TaskMoveBaseServos.cpp
                        TaskPlanTrajectory.cpp
                        TaskReceiveCommand.cpp
                       INCLUDE_DIRS 
                        .)