idf_component_register(SRCS 
                        main.cpp
                        TaskCollectTelemetry.cpp
                        TaskControlCamera.cpp
                        TaskFindPosition.cpp
                        TaskFocus.cpp
                        TaskMoveBaseServos.cpp
                        TaskOTAUpdate.cpp
                        TaskPlanTrajectory.cpp
                        TaskReceiveCommand.cpp
                        TaskRemoteLog.cpp
                       INCLUDE_DIRS 
                        .)